testing/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: grafana.mcleantom.com
    external-dns.alpha.kubernetes.io/target: 92d7c3ac-fb0c-4720-b43a-910e16f3692a.cfargotunnel.com
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.mcleantom.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: Prefix
