testing/homeassistant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: homeassistant.mcleantom.com
    external-dns.alpha.kubernetes.io/target: 92d7c3ac-fb0c-4720-b43a-910e16f3692a.cfargotunnel.com
  name: home-assistant
  namespace: home-assistant 
spec:
  rules:
  - host: homeassistant.mcleantom.com
    http:
      paths:
      - backend:
          service:
            name: home-assistant
            port:
              number: 8123
        path: /
        pathType: Prefix
