testing/overleaf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: overleaf.mcleantom.com
    external-dns.alpha.kubernetes.io/target: 92d7c3ac-fb0c-4720-b43a-910e16f3692a.cfargotunnel.com
  name: overleaf
  namespace: overleaf
spec:
  rules:
  - host: overleaf.mcleantom.com
    http:
      paths:
      - backend:
          service:
            name: overleaf
            port:
              number: 80
        path: /
        pathType: Prefix
